--- a/src/components/styles/Box.scss
+++ b/src/components/styles/Box.scss
@@ -1,10 +1,10 @@
 .game__box {
-  width: 100px;
-  height: 100px;
-  outline: solid black;
-  background-color: burlywood;
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
   align-items: center;
+  background-color: rgba(218, 105, 0, 0.13);
+  display: flex;
+  flex-grow: 1;
+  height: 100px;
+  justify-content: center;
+  outline: solid black;
+  width: 100px;
 }
