--- a/src/components/styles/Game.scss
+++ b/src/components/styles/Game.scss
@@ -4,9 +4,10 @@
   flex-direction: column;
   height: inherit;
   justify-content: space-between;
+  margin-top: 20px;
 }
 
-.game__screen {
+.game__grid {
   display: flex;
   flex-wrap: wrap;
   min-height: 300px;
